added TextViews which includes a brief description for each of the activities and a TexiView with the name of the class or library which is going to be used to implement the play music functionality

--- a/app/src/main/res/layout/activity_artists.xml
+++ b/app/src/main/res/layout/activity_artists.xml
@@ -77,6 +77,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/lessLightBlue"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="In this activity the user can see all artists on the user's device."
+                android:textStyle="bold" />
+
             <SearchView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
