--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -77,6 +77,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/lessLightBlue"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="In this activity the user can create playlists."
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
