--- a/app/src/main/res/layout/activity_artists.xml
+++ b/app/src/main/res/layout/activity_artists.xml
@@ -83,7 +83,7 @@
                 android:background="@color/lessLightBlue"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="In this activity the user can see all artists on the user's device."
+                android:text="In this activity the user can see all artists on the user's device in a alphabetical order."
                 android:textStyle="bold" />
 
             <SearchView
